fix(game-play): fix iPad Safari hint dialog and persistent keyboard bar
Replace DaisyUI <dialog> hint chooser with Ionic action sheet to fix
invisible buttons on iPad Safari. Add explicit blur on game-state
transitions to dismiss the persistent QuickType bar and white band.

--- a/src/global.scss
+++ b/src/global.scss
@@ -32,6 +32,11 @@
 @import '@ionic/angular/css/text-transformation.css';
 @import '@ionic/angular/css/flex-utils.css';
 
+ion-action-sheet .action-sheet-disabled {
+	opacity: 0.4 !important;
+	pointer-events: none;
+}
+
 ion-modal {
 	--width: fit-content;
 	--min-width: 250px;
